<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoContacto">

    <TextView
        android:id="@+id/tv_titulo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/confirmar_datos"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_titulo2"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/nombre"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/fecha"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/telefono"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/email"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/descripcion"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_ed"
        style="@style/Theme.MaterialComponents.Light.BarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/editar_datos"
        android:textColor="#090808"
        android:textSize="18sp"
        android:textStyle="bold" />



</RelativeLayout>